--- a/app/globals.css
+++ b/app/globals.css
@@ -107,15 +107,11 @@
   background: rgba(193, 193, 193, 0.5);
 }
 
-.sidebar-content:hover::-webkit-scrollbar-thumb {
-  background: #c1c1c1;
-}
 
-.dark .sidebar-content::-webkit-scrollbar-thumb {
-  background: rgba(85, 85, 85, 0.5);
-}
 
-.dark .sidebar-content:hover::-webkit-scrollbar-thumb {
-  background: #555;
+.w-md-editor-toolbar {
+  position: sticky; /* 스크롤 시 고정 */
+  top: 0; /* 상단에 고정 */
+  z-index: 10; /* 다른 요소 위에 표시 */
+  background-color: white; /* 배경색 설정 */
 }
-
