--- a/app/globals.css
+++ b/app/globals.css
@@ -107,11 +107,13 @@
   background: rgba(193, 193, 193, 0.5);
 }
 
+.custom-md-editor {
+  height: 650px !important;
+}
 
 
 .w-md-editor-toolbar {
-  position: sticky; /* 스크롤 시 고정 */
   top: 0; /* 상단에 고정 */
-  z-index: 10; /* 다른 요소 위에 표시 */
+  z-index: 2; /* 다른 요소 위에 표시 */
   background-color: white; /* 배경색 설정 */
 }
